--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 streamlit
 pandas
+openai
 bcrypt
 plotly
-openai
 google-api-python-client
 google-auth
 google-auth-httplib2
 google-auth-oauthlib
+protobuf
+pyopenssl
+cryptography
